quick fixes for flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,9 @@
 .container{
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    width: 1200px;
+    flex-wrap: wrap;
+    align-self: flex-start;
+    max-width: 1200px;
     height: 600px;
     background-color: antiquewhite;
     margin: auto;
